<?xml version="1.0"?>
<package format="2">
  <name>r4a_ros_tld</name>
  <version>0.1.0</version>
  <description>The predator node</description>


  <maintainer email="etsardou@eng.auth.gr">Manos Tsardoulias</maintainer>

  <license>TODO</license>

  <author>Manos Tsardoulias</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>open_tld</depend>


</package>
